# frontier

./: .gitmodules  README.md
src/: CMakeLists.txt
src/asset_managers/: CMakeLists.txt
src/asset_managers/include/texture_manager/: TextureManager.hpp
src/asset_managers/src/: TextureManager.cpp
src/frontier/: CMakeLists.txt
src/frontier/assets/: level1.xml  level1_nav.tmx
src/frontier/include/frontier/: Frontier.hpp  Level.hpp  LevelNavParser.hpp  LevelParser.hpp  PlayState.hpp  QuadTree.hpp  SDLApplication.hpp  World.hpp
src/frontier/include/frontier/commands/: Command.hpp  MoveCommand.hpp
src/frontier/include/frontier/components/: InputComponent.hpp  NavigationComponent.hpp  PhysicsComponent.hpp  Position.hpp  PositionComponent.hpp  RotationComponent.hpp  ShapeComponent.hpp  Sprite.hpp  SpriteComponent.hpp  TransformComponent.hpp  UserInputComponent.hpp  Util.hpp  VelocityComponent.hpp
src/frontier/include/frontier/events/: DebugDrawableEvent.hpp
src/frontier/include/frontier/states/: IState.hpp  IStateMachine.hpp  PlayState.hpp  StateMachine.hpp
src/frontier/include/frontier/systems/: InputSystem.hpp  NavigationSystem.hpp  PhysicsSystem.hpp  RenderSystem.hpp
src/frontier/src/: Frontier.cpp  Level.cpp  LevelNavParser.cpp  LevelParser.cpp  PlayState.cpp  SDLApplication.cpp  StateMachine.cpp  World.cpp  config.hpp  main.cpp
src/frontier/src/components/: InputComponent.cpp  UserInputComponent.cpp
src/frontier/src/states/: PlayState.cpp  StateMachine.cpp
src/frontier/src/systems/: InputSystem.cpp  NavigationSystem.cpp  PhysicsSystem.cpp  RenderSystem.cpp
src/graphics/: CMakeLists.txt
src/graphics/include/asset_util/: Util.hpp
src/graphics/include/graphics/: Camera.hpp  Color.hpp  IDebugDrawable.hpp  IRenderTarget.hpp  IRenderable.hpp  ISelfRenderable.hpp  PrimativeType.hpp  RenderManager.hpp  TextureManager.hpp  TextureRef.hpp  Transform.hpp  Window.hpp
src/graphics/include/texture_manager/: TextureManager.hpp
src/graphics/src/: Camera.cpp  RenderManager.cpp  TextureManager.cpp  Transform.cpp  Util.cpp  Window.cpp
src/input/: CMakeLists.txt
src/input/include/input/: BindingContext.hpp  BindingData.hpp  IInputConsumer.hpp  IInputProducer.hpp  InputActions.hpp  InputConsumer.hpp  InputEvent.hpp  InputManager.hpp  Util.hpp
src/input/src/: BindingContext.cpp  InputConsumer.cpp  InputManager.cpp
src/math/: CMakeLists.txt
src/math/include/math/: Collision.hpp  ConvexHelpers.hpp  ConvexShape.hpp  Matrix.hpp  Misc.hpp  Point2.hpp  Printers.hpp  Rect.hpp  Vector2.hpp
src/math/include/math/impl/: Matrix_impl.hpp
src/math/src/: Collision.cpp
src/math/test/: CMakeLists.txt  test_Vector2.cpp  tests
src/navigation/: CMakeLists.txt
src/navigation/include/navigation/: AStar.hpp  INav.hpp  INavAlgorithm.hpp  NavMesh.hpp  NavPoly.hpp  test.hpp
src/navigation/src/: AStar.cpp  NavMesh.cpp  test.cpp
src/texture_manager/: CMakeLists.txt
src/texture_manager/include/texture_manager/: TextureManager.hpp
src/texture_manager/src/: TextureManager.cpp
src/utils/: CMakeLists.txt
src/utils/log/: CMakeLists.txt
src/utils/log/include/log/: log.hpp
src/utils/log/src/: log.cpp  log_impl.hpp
src/utils/utils/: CMakeLists.txt
src/utils/utils/include/utils/: Optional.hpp
